plugins/ffi/jolt/jolt_ffi.h

typedef class_type World World;
typedef class_type CollisionShape CollisionShape;
typedef class_type WorldBody WorldBody;
// Configuration for a body when it si created.
struct BodyConfig {
  CollisionShape* shape;
  float position[4];
  float rotation[4];
  float linear_velocity[4];
  float angular_velocity[4];
  int motion_type;
  int motion_quality;
};
enum ConvexShapeConfigType {
  kUnknown,
  kBox,
  kSphere,
  kCapsule,
  kConvexHull,
};
struct ConvexShapeConfig {
  ConvexShapeConfigType type = kUnknown;
  float density = 0.0;
  // kBox:
  // payload is the half extents.
  // kSphere:
  // payload[0] is the radius.
  // kCapsule:
  // payload[0] is half height, payload[1] is top radius, payload[2] is bottom radius.
  // kConvexHull:
  // payload is not used.
  float payload[3];
};
struct CompoundShapeConfig {
  struct PerShape {
    CollisionShape* shape;
    float position[3];
    float rotation[4];
  };
  // TODO(johnmccutchan): Don't artificially limit the number of compound shapes we can pass.
  PerShape shapes[16];
  int num_shapes = 0;
};