lib/physics/src/jolt_ffi_generated.dart


typedef Dart_NewPersistentHandle_Type
    = ffi.Pointer<ffi.NativeFunction<Dart_NewPersistentHandle_TypeFunction>>;
typedef Dart_NewPersistentHandle_TypeFunction = ffi.Handle Function(
    ffi.Handle object);
typedef DartDart_NewPersistentHandle_TypeFunction = Object Function(
    Object object);
typedef Dart_SetPersistentHandle_Type
    = ffi.Pointer<ffi.NativeFunction<Dart_SetPersistentHandle_TypeFunction>>;
typedef Dart_SetPersistentHandle_TypeFunction = ffi.Void Function(
    ffi.Handle obj1, ffi.Handle obj2);
typedef DartDart_SetPersistentHandle_TypeFunction = void Function(
    Object obj1, Object obj2);
typedef Dart_DeletePersistentHandle_Type
    = ffi.Pointer<ffi.NativeFunction<Dart_DeletePersistentHandle_TypeFunction>>;
typedef Dart_DeletePersistentHandle_TypeFunction = ffi.Void Function(
    ffi.Handle object);
typedef DartDart_DeletePersistentHandle_TypeFunction = void Function(
    Object object);
typedef Dart_NewWeakPersistentHandle_Type = ffi
    .Pointer<ffi.NativeFunction<Dart_NewWeakPersistentHandle_TypeFunction>>;
typedef Dart_NewWeakPersistentHandle_TypeFunction
    = Dart_WeakPersistentHandle Function(
        ffi.Handle object,
        ffi.Pointer<ffi.Void> peer,
        ffi.IntPtr external_allocation_size,
        Dart_HandleFinalizer callback);
typedef DartDart_NewWeakPersistentHandle_TypeFunction
    = Dart_WeakPersistentHandle Function(
        Object object,
        ffi.Pointer<ffi.Void> peer,
        int external_allocation_size,
        Dart_HandleFinalizer callback);
typedef Dart_DeleteWeakPersistentHandle_Type = ffi
    .Pointer<ffi.NativeFunction<Dart_DeleteWeakPersistentHandle_TypeFunction>>;
typedef Dart_DeleteWeakPersistentHandle_TypeFunction = ffi.Void Function(
    Dart_WeakPersistentHandle object);
typedef DartDart_DeleteWeakPersistentHandle_TypeFunction = void Function(
    Dart_WeakPersistentHandle object);
typedef Dart_NewFinalizableHandle_Type
    = ffi.Pointer<ffi.NativeFunction<Dart_NewFinalizableHandle_TypeFunction>>;
typedef Dart_NewFinalizableHandle_TypeFunction
    = Dart_FinalizableHandle Function(
        ffi.Handle object,
        ffi.Pointer<ffi.Void> peer,
        ffi.IntPtr external_allocation_size,
        Dart_HandleFinalizer callback);
typedef DartDart_NewFinalizableHandle_TypeFunction
    = Dart_FinalizableHandle Function(Object object, ffi.Pointer<ffi.Void> peer,
        int external_allocation_size, Dart_HandleFinalizer callback);
typedef Dart_FinalizableHandle = ffi.Pointer<_Dart_FinalizableHandle>;

final class _Dart_FinalizableHandle extends ffi.Opaque {}

typedef Dart_DeleteFinalizableHandle_Type = ffi
    .Pointer<ffi.NativeFunction<Dart_DeleteFinalizableHandle_TypeFunction>>;
typedef Dart_DeleteFinalizableHandle_TypeFunction = ffi.Void Function(
    Dart_FinalizableHandle object, ffi.Handle strong_ref_to_object);
typedef DartDart_DeleteFinalizableHandle_TypeFunction = void Function(
    Dart_FinalizableHandle object, Object strong_ref_to_object);
typedef Dart_CurrentIsolate_Type
    = ffi.Pointer<ffi.NativeFunction<Dart_CurrentIsolate_TypeFunction>>;
typedef Dart_CurrentIsolate_TypeFunction = Dart_Isolate Function();

/// An isolate is the unit of concurrency in Dart. Each isolate has
/// its own memory and thread of control. No state is shared between
/// isolates. Instead, isolates communicate by message passing.
///
/// Each thread keeps track of its current isolate, which is the
/// isolate which is ready to execute on the current thread. The
/// current isolate may be NULL, in which case no isolate is ready to
/// execute. Most of the Dart apis require there to be a current
/// isolate in order to function without error. The current isolate is
/// set by any call to Dart_CreateIsolateGroup or Dart_EnterIsolate.
typedef Dart_Isolate = ffi.Pointer<_Dart_Isolate>;

final class _Dart_Isolate extends ffi.Opaque {}

typedef Dart_ExitIsolate_Type
    = ffi.Pointer<ffi.NativeFunction<Dart_ExitIsolate_TypeFunction>>;
typedef Dart_ExitIsolate_TypeFunction = ffi.Void Function();
typedef DartDart_ExitIsolate_TypeFunction = void Function();
typedef Dart_EnterIsolate_Type
    = ffi.Pointer<ffi.NativeFunction<Dart_EnterIsolate_TypeFunction>>;
typedef Dart_EnterIsolate_TypeFunction = ffi.Void Function(Dart_Isolate);
typedef DartDart_EnterIsolate_TypeFunction = void Function(Dart_Isolate);
typedef Dart_Post_Type
    = ffi.Pointer<ffi.NativeFunction<Dart_Post_TypeFunction>>;
typedef Dart_Post_TypeFunction = ffi.Bool Function(
    Dart_Port_DL port_id, ffi.Handle object);
typedef DartDart_Post_TypeFunction = bool Function(
    DartDart_Port_DL port_id, Object object);
typedef Dart_NewSendPort_Type
    = ffi.Pointer<ffi.NativeFunction<Dart_NewSendPort_TypeFunction>>;
typedef Dart_NewSendPort_TypeFunction = ffi.Handle Function(
    Dart_Port_DL port_id);
typedef DartDart_NewSendPort_TypeFunction = Object Function(
    DartDart_Port_DL port_id);
typedef Dart_SendPortGetId_Type
    = ffi.Pointer<ffi.NativeFunction<Dart_SendPortGetId_TypeFunction>>;
typedef Dart_SendPortGetId_TypeFunction = ffi.Handle Function(
    ffi.Handle port, ffi.Pointer<Dart_Port_DL> port_id);
typedef DartDart_SendPortGetId_TypeFunction = Object Function(
    Object port, ffi.Pointer<Dart_Port_DL> port_id);
typedef Dart_EnterScope_Type
    = ffi.Pointer<ffi.NativeFunction<Dart_EnterScope_TypeFunction>>;
typedef Dart_EnterScope_TypeFunction = ffi.Void Function();
typedef DartDart_EnterScope_TypeFunction = void Function();
typedef Dart_ExitScope_Type
    = ffi.Pointer<ffi.NativeFunction<Dart_ExitScope_TypeFunction>>;
typedef Dart_ExitScope_TypeFunction = ffi.Void Function();
typedef DartDart_ExitScope_TypeFunction = void Function();
typedef Dart_IsNull_Type
    = ffi.Pointer<ffi.NativeFunction<Dart_IsNull_TypeFunction>>;
typedef Dart_IsNull_TypeFunction = ffi.Bool Function(ffi.Handle);
typedef DartDart_IsNull_TypeFunction = bool Function(Object);
typedef Dart_UpdateExternalSize_Type
    = ffi.Pointer<ffi.NativeFunction<Dart_UpdateExternalSize_TypeFunction>>;
typedef Dart_UpdateExternalSize_TypeFunction = ffi.Void Function(
    Dart_WeakPersistentHandle object, ffi.IntPtr external_allocation_size);
typedef DartDart_UpdateExternalSize_TypeFunction = void Function(
    Dart_WeakPersistentHandle object, int external_allocation_size);
typedef Dart_UpdateFinalizableExternalSize_Type = ffi.Pointer<
    ffi.NativeFunction<Dart_UpdateFinalizableExternalSize_TypeFunction>>;
typedef Dart_UpdateFinalizableExternalSize_TypeFunction = ffi.Void Function(
    Dart_FinalizableHandle object,
    ffi.Handle strong_ref_to_object,
    ffi.IntPtr external_allocation_size);
typedef DartDart_UpdateFinalizableExternalSize_TypeFunction = void Function(
    Dart_FinalizableHandle object,
    Object strong_ref_to_object,
    int external_allocation_size);

final class World extends ffi.Opaque {}

final class CollisionShape extends ffi.Opaque {}

final class WorldBody extends ffi.Opaque {}

/// Configuration for a body when it si created.
final class BodyConfig extends ffi.Struct {
  external ffi.Pointer<CollisionShape> shape;

  @ffi.Array.multi([4])
  external ffi.Array<ffi.Float> position;

  @ffi.Array.multi([4])
  external ffi.Array<ffi.Float> rotation;

  @ffi.Array.multi([4])
  external ffi.Array<ffi.Float> linear_velocity;

  @ffi.Array.multi([4])
  external ffi.Array<ffi.Float> angular_velocity;

  @ffi.Int()
  external int motion_type;

  @ffi.Int()
  external int motion_quality;
}

abstract class ConvexShapeConfigType {
  static const int kUnknown = 0;
  static const int kBox = 1;
  static const int kSphere = 2;
  static const int kCapsule = 3;
  static const int kConvexHull = 4;
}

final class ConvexShapeConfig extends ffi.Struct {
  @ffi.Int32()
  external int type;

  @ffi.Float()
  external double density;

  /// kBox:
  /// payload is the half extents.
  /// kSphere:
  /// payload[0] is the radius.
  /// kCapsule:
  /// payload[0] is half height, payload[1] is top radius, payload[2] is bottom radius.
  /// kConvexHull:
  /// payload is not used.
  @ffi.Array.multi([3])
  external ffi.Array<ffi.Float> payload;
}

final class CompoundShapeConfig extends ffi.Struct {
  /// TODO(johnmccutchan): Don't artificially limit the number of compound shapes we can pass.
  @ffi.Array.multi([16])
  external ffi.Array<PerShape> shapes;

  @ffi.Int()
  external int num_shapes;
}

final class PerShape extends ffi.Struct {
  external ffi.Pointer<CollisionShape> shape;

  @ffi.Array.multi([3])
  external ffi.Array<ffi.Float> position;

  @ffi.Array.multi([4])
  external ffi.Array<ffi.Float> rotation;
}
